# ChronoSense

./: .gitignore  Groq_models_list.py  README.md  app.py  main.py  pyproject.toml  requirement.txt  requirements.txt
app/: analytics.py  data_handler.py  embedding_manager.py  rag_pipeline.py
chroma_store/: chroma.sqlite3
chroma_store/07150e19-aeeb-48b5-9fa7-790f6b3a569e/: index_metadata.pickle
data/: dataset.ipynb  goog_stock_data.csv  processed_forecasts.csv  sample_timeseries.csv  script_sample_data.py
data/vector_store/2595aca5-76e1-492b-9bac-c436b84da365/: index_metadata.pickle
models/vector_store/chroma_db/: chroma.sqlite3
notebooks/: rag+time_series.ipynb  summary_method.ipynb
notebooks/chroma_store/: chroma.sqlite3
src/: chat_groq_client.py  cnn_encoder.py  data_loader.py  embed_and_store.py  pre_data_analysis.py  query_embed_and_store.py  search.py  summary_doc_generator.py  time_series_analysis.py  vector_pipeline.py  visualization_generator.py
utils/: detect_plot.py  env.py  extract_numeric_values.py  logger.py  slice_df.py
